--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,13 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div>
+  <ul>
+    <div>
+      <h3>日本代表の試合</h3>
+      <% if @games.any? %>
+        <ol>
+          <%= render @games %>
+        </ol>
+        <%= will_paginate @games %>
+      <% end %>
+    </div>
+  </ul>
+</div>
