タイトルタグを編集

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,2 +1,8 @@
-<%= @game.date %>,
-<%= @game.home_team %> - <%= @game.away_team %>
+<% provide(:title, @game.game_title ) %>
+
+<h1>
+  <%= @game.game_title %>
+  <!--<%= @game.date %> （<%= @game.tournament %>）<%= @game.home_team %> - <%= @game.away_team %>-->
+</h1>
+
+<%= @game.date %> <%= @game.home_team %> - <%= @game.away_team %>
